# sleep-tracker

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.md  main.py  pyproject.toml
.agents/: AGENTS.md
legacy/: README.md  pyproject.toml
legacy/src_cpp/: main.cpp
legacy/src_python/: README.md  analyzer.py  calendar_ui.py  lifecycle.py  monitor.py
legacy/src_tauri/: index.html  package.json  pnpm-lock.yaml
legacy/src_tauri/data/: .gitignore
legacy/src_tauri/src/: App.css  main.tsx  vite-env.d.ts
legacy/src_tauri/src-tauri/.cargo/: config.toml
legacy/src_tauri/src-tauri/icons/: icon.icns
legacy/src_tauri/src-tauri/src/: cloud.rs  lib.rs  monitor.rs  prediction.rs
legacy/src_tauri/src/chart/: README.md  WeeklyChart.tsx
legacy/src_tauri/src/core/: README.md
legacy/src_tauri/src/detail/: DayDetail.tsx  index.ts
legacy/src_tauri/src/prediction/: PredictionCard.tsx
legacy/src_tauri/src/settings/: Settings.tsx  index.ts
legacy/src_tauri/src/ui/: README.md
src_cpp/: README.md  build.bat  device_heartbeat.txt  parse_sessions.cpp  sleep_events.txt
src_python/: README.md  analyzer.py  calendar_ui.py  database.py  gist_setup.py  lifecycle.py  main.py  monitor.py  setup_shortcuts.py
src_slint/: Cargo.toml  README.md  build.rs
src_slint/android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
src_slint/android/app/: build.gradle.kts
src_slint/android/app/src/main/: AndroidManifest.xml
src_slint/android/app/src/main/kotlin/com/sleeptracker/app/: DriveSignalWorker.kt  MainActivity.kt  SyncService.kt  SyncWorker.kt  UsageReporter.kt
src_slint/android/app/src/main/res/values/: strings.xml
src_slint/data/: sleep_events.txt  sleep_manual.txt
src_slint/src/: README.md  android_bg.rs  cloud.rs  config.rs  events.rs  home.rs  lib.rs  main.rs  monitor.rs  paths.rs  platform.rs  settings_ui.rs  tray.rs  utils.rs
src_slint/src/core/: README.md  cloud.rs  config.rs  events.rs  mod.rs  prediction.rs  utils.rs
src_slint/src/core/cloud/: README.md  backup_drive.rs  clear_data.rs  cloud_tests.rs  fetch.rs  generation.rs  sync.rs  validation.rs
src_slint/src/core/events/: README.md  backup.rs  csv.rs  events_tests.rs  excluded.rs  parsing.rs  session_ops.rs  usage_packages.rs
src_slint/src/core/events/tests/: README.md  backup_tests.rs  excluded_tests.rs  parsing_tests.rs  usage_packages_tests.rs
src_slint/src/core/prediction/: README.md  cycle.rs  mod.rs
src_slint/src/platform/: README.md  android.rs  android_bg.rs  android_restore.rs  android_usage.rs  mod.rs  monitor.rs  tray.rs  windows.rs
src_slint/src/platform/android/: README.md  bg.rs  entry.rs  mod.rs  restore.rs  usage.rs
src_slint/src/ui/: README.md  home.rs  mod.rs  settings_ui.rs  sync_status.rs
src_slint/src/ui/home/: README.md  calendar.rs  chart.rs  day_detail.rs  state.rs  stats.rs
src_slint/src/ui/settings_ui/: README.md  backup_restore.rs  data_management.rs  export.rs  general.rs
src_slint/ui/: main.slint
src_tauri/: package.json  pnpm-lock.yaml
src_tauri/data/: sleep_events.txt  sleep_manual.txt
src_tauri/maestro_tests/: button_test.yaml
src_tauri/src/: App.css  App.tsx  CalendarPicker.tsx  DayDetail.tsx  PredictionCard.tsx  PredictionTab.tsx  README.md  Settings.tsx  StatsCard.tsx  TimePicker.tsx  WeeklyChart.tsx  main.tsx  types.ts  utils.ts
src_tauri/src-tauri/: Cargo.toml  tauri.conf.json
src_tauri/src-tauri/capabilities/: default.json
src_tauri/src-tauri/icons/: icon.icns
src_tauri/src-tauri/src/: cloud.rs  config.rs  events.rs  lib.rs  main.rs  monitor.rs  prediction.rs
src_tauri/src/chart/: StatsCard.tsx  WeeklyChart.tsx  index.ts
src_tauri/src/core/: index.ts  logger.ts  types.ts  utils.ts
src_tauri/src/detail/: README.md
src_tauri/src/prediction/: PredictionCard.tsx  PredictionTab.tsx  README.md  index.ts
src_tauri/src/settings/: README.md  Settings.tsx
src_tauri/src/ui/: CalendarPicker.tsx  TimePicker.tsx  index.ts
worker/: appsscript.gs
