[package]
name = "sleep_tracker"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["sleep-tracker"]
description = "睡眠トラッカー"

[lib]
name = "sleep_tracker"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "sleep_tracker"
path = "src/main.rs"

[dependencies]
slint = { version = "1.13", features = ["raw-window-handle-06"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
smartcore = "0.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
mslnk = "0.1"
tray-icon = "0.20"
image = { version = "0.25", default-features = false, features = ["png"] }
windows-sys = { version = "0.48", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_Security", "Win32_UI_WindowsAndMessaging"] }
raw-window-handle = "0.6"

[target.'cfg(not(target_os = "android"))'.dependencies]
rfd = "0.15"

[target.'cfg(target_os = "android")'.dependencies]
slint = { version = "1.13", features = ["backend-android-activity-06"] }

[build-dependencies]
slint-build = "1.13"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[package.metadata.android]
package = "com.sleeptracker.app"
compile_sdk_version = 34
target_sdk_version = 34
min_sdk_version = 24
resources = "android_res"

[[package.metadata.android.uses_permission]]
name = "android.permission.INTERNET"

# PC版と共通のアイコン（assets/icon.png）をandroid_res/mipmap-*/ic_launcher.pngに
# コピーして使う。
[package.metadata.android.application]
icon = "@mipmap/ic_launcher"

