[package]
name = "src_tauri"
version = "0.1.21"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "src_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Required for production builds (Android APK / Windows installer).
# Without this, tauri sets cfg!(dev)=true and the WebView tries to proxy to localhost:1420.
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smartcore = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Desktop-only: tray icon
[target.'cfg(not(target_os = "android"))'.dependencies]
tauri = { version = "2", features = ["tray-icon"] }

# Windows-only: registry + shell link
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
mslnk = "0.1"
